# fhir-benchmarks

./: .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  netlify.toml
.github/workflows/: rust_basics.yml
dev/architecture/: 0001-hardware.md  0002-test-error-output.md  0003-test-output.md  0004-locust-or-not.md
dev/plans/: 0001-round-1.md
dev/stories/: 0001-perf-compare.md  0002-ci.md  0003-sample-data.md  0003-synthetic-data.md  0004-patient-ops.md  0005-firely-spark.md  0006-hapi-startup-wait.md  0007-error-details.md  0008-readme.md  0009-publish-results.md  0010-hapi-post-org-timeouts.md  0011-operation-failure-debugging.md  0012-ibm-fhir.md  0013-refactor-dockerfiles.md  0014-cache-sample-data-in-s3.md  0015-tracing.md  0016-more-organization-operations.md  0017-simplify-adding-operations.md  0018-analyze-synthea-output.md  0019-timeseries-data.md  0020-automate-runs-in-cloud.md  0021-ci-tlc.md
doc/: server-compliance.md
fhir-bench-orchestrator/: Cargo.toml  build.rs
fhir-bench-orchestrator/src/: config.rs  errors.rs  lib.rs  main.rs  sample_data.rs
fhir-bench-orchestrator/src/servers/: docker_compose.rs  firely_spark.rs  hapi_jpa.rs  ibm_fhir.rs  mod.rs
fhir-bench-orchestrator/src/test_cases/: mod.rs
fhir-bench-orchestrator/src/test_framework/: metadata.rs  mod.rs  post_org.rs  serde_duration.rs
fhir-bench-orchestrator/src/util/: histogram_hgrm_export.rs  mod.rs  serde_duration_iso8601.rs  serde_duration_millis.rs  serde_histogram.rs
fhir-bench-orchestrator/tests/: basics.rs
fhir-bench-site/: .gitignore  README.md  config.toml
fhir-bench-site/content/: _index.md
fhir-bench-site/content/about/: _index.md
fhir-bench-site/content/benchmarks/: _index.md
fhir-bench-site/content/benchmarks/round_0/: index.md
fhir-bench-site/sass/: site.scss
fhir-bench-site/static/: site.js
fhir-bench-site/static/logo/: README.md
fhir-bench-site/templates/: base.html  page.html  section.html
fhir-bench-site/templates/benchmarks/: round_0.html
fhir-bench-site/templates/macros/: head.html
results/: benchmark-2021-05-02T11:48:11-04:00-hapi-post-org-8.hdrh  benchmark-2021-05-02T11:48:11-04:00.json
server_builds/firely_spark/: .gitignore  README.md  docker_compose_firely_spark.sh  spark_download_and_launch.sh
server_builds/hapi_jpaserver_starter/: docker-compose.yml  docker_compose_hapi_jpaserver_starter.sh
server_builds/hapi_jpaserver_starter/hapi-data/: application.yaml
server_builds/ibm_fhir/: .gitignore  README.md  docker-compose.yml  docker_compose_ibm_fhir.sh  ibm_fhir_launch.sh
server_builds/ibm_fhir/volumes/config/: .gitignore
server_builds/ibm_fhir/volumes/overrides/: .gitignore
synthetic-data/: Dockerfile.synthea  README.md  generate-synthetic-data.sh
