[package]
name = "fhir-bench-orchestrator"
version = "0.1.0"
authors = ["Karl M. Davis <karl@justdavis.com>"]
edition = "2018"

[dependencies]

# Allow async code.
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1"
futures = "0.3"

# Used for making HTTP requests.
url = "2"
reqwest = { version = "0.11", features = ["blocking"] }
async-h1 = "2"
http-types = "2"

# Provide application logging facilities.
log = "0.4"
# 'slog' is the logging framework used by this application. You can add the `max_level_*` feature to it
# to crank logging all the way up (`max_level_info` is the default).
slog = { version = "2", features = ["nested-values"] }
slog-async = { version = "2" }
slog-stdlog = { version = "4" }
slog-scope = { version = "4" }
slog-json = { version = "2" }
slog-term = { version = "2" }
slog_derive = { version = "0.2" }
erased-serde = { version = "0.3" }

# Read environment variables from a file, if present.
dotenv = "0.15"

# Easier idiomatic error handling.
anyhow = "1"
thiserror = "1"

# Provide JSON serialization/deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
json = "0.12"

# Represent decimal numbers without loss of precision.
rust_decimal = { version = "1", features = ["serde-float"] }

# Date & time.
chrono = { version = "0.4", features = ["serde"] }

# Serialize/deserialize chrono Duration values to JSON.
regex = "1"
lazy_static = "1"

# Calculate and model performance metrics.
hdrhistogram = "7"
base64 = "0.13"
flate2 = "1.0"

# Used in integration tests, to run binaries and verify results.
assert_cmd = "1"