[package]
name = "fhir-bench-orchestrator"
version = "0.1.0"
build = "build.rs"
authors = ["Karl M. Davis <karl@justdavis.com>"]
edition = "2018"

[dependencies]

# Allow async code.
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Used for making HTTP requests.
url = "2"
http = "0.2"
reqwest = "0.11"

# Provide application logging facilities.
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
tracing-error = "0.2"
atty = "0.2"

# Easier idiomatic error handling for applications.
# Eyre is a mostly-drop-in replacement for `anyhow`,
#   but with `color-eyre` can leverage `SpanTrace`s when reporting errors.
eyre = "0.6"
color-eyre = "0.5"
thiserror = "1"

# Read environment variables from a file, if present.
dotenv = "0.15"

# Provide JSON serialization/deserialization.
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision", "preserve_order"] }
json = "0.12"

# Represent decimal numbers without loss of precision.
rust_decimal = { version = "1", features = ["serde-float"] }

# Date & time.
chrono = { version = "0.4", features = ["serde"] }

# Serialize/deserialize chrono Duration values to JSON.
regex = "1"
lazy_static = "1"

# Calculate and model performance metrics.
hdrhistogram = "7"
base64 = "0.13"
flate2 = "1.0"


[dev-dependencies]

# Used in integration tests, to run binaries and verify results.
assert_cmd = "1"

# Used in tests, to generate random temp dirs.
tempfile = "3"

# Used in tests, to ensure that the shared resources are properly managed.
serial_test = "0.5"


[build-dependencies]

# Used to pass build environment metadata (e.g. Git commit ID) into the compiler.
vergen = "5"

# Easier idiomatic error handling.
anyhow = "1"